--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 		<header>
 			<section>
 				<div class="centerd">
-					<input type="search" name="search" placeholder="Search">
+					<h1>MUSIC</h1>
+					<input type="text" name="search" placeholder="Search">
+					<div><span>Welcome to our<br> online store!</span></div><div id="cart_icon"><span>0</span></div>
 				</div>
 			</section>
 		</header>
