I'm giving up for today :unamused:

--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
 					<div><span>Welcome to our<br> online store!</span></div><div id="cart_icon"><span>0</span></div>
 				</div>
 			</section>
+			<div id="top_pics">
+				<div>
+					<img class="big_pic" src="" alt="big one">
+				</div>
+				
+				<div>
+					<img class="small_pic" src="" alt="small one1">
+					<img class="small_pic" src="" alt="small one2">
+					<img class="small_pic" src="" alt="small one3">
+					<img class="small_pic" src="" alt="small one4">
+					<img class="small_pic" src="" alt="small one5">
+					<img class="small_pic" src="" alt="small one6">
+					<img class="small_pic" src="" alt="small one7">
+					<img class="small_pic" src="" alt="small one8">
+				</div>
+			</div>
 		</header>
 		<main>
 		
