--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 			</section>
 			<div id="top_pics">
 				<div>
-					<img class="big_pic" src="" alt="big one">
+					<img class="big_pic" src="images/elvis_presley_-_viva_elvis_1.png" alt="big one">
 				</div>
 				
 				<div>
-					<img class="small_pic" src="" alt="small one1">
-					<img class="small_pic" src="" alt="small one2">
-					<img class="small_pic" src="" alt="small one3">
-					<img class="small_pic" src="" alt="small one4">
-					<img class="small_pic" src="" alt="small one5">
-					<img class="small_pic" src="" alt="small one6">
-					<img class="small_pic" src="" alt="small one7">
-					<img class="small_pic" src="" alt="small one8">
+					<img class="small_pic" src="images/john_mayall_-_rock_the_blues_tonight_1.png" alt="small one1">
+					<img class="small_pic" src="images/lady_gaga_-_disco_heaven_1.png" alt="small one2">
+					<img class="small_pic" src="images/henrik_freischlader_band_-_the_blues_1.png" alt="small one3">
+					<img class="small_pic" src="images/pink_-_greatest_hits_so_far_1.png" alt="small one4">
+					<img class="small_pic" src="images/ultimate_dance_party_1.png" alt="small one5">
+					<img class="small_pic" src="images/tom_schuman_-_extremities_1990_1.png" alt="small one6">
+					<img class="small_pic" src="images/top_gear_-_full_throttle_1.png" alt="small one7">
+					<img class="small_pic" src="images/the_philip_cohen_collection_beatles_-_69_rehearsals_1.png" alt="small one8">
 				</div>
 			</div>
 		</header>
