--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 	</head>
 	
 	<body>
-	
-		<nav>
-			<div class="centerd">
-				<a href="#">Home</a>
-				<a href="#">My Account</a>
-				<a href="#">My Wishlist</a>
-				<a href="#">Checkout</a>
-				<a href="#">Log In</a>
-			</div>
-		</nav>
 		<header>
-			<section>
+			<div class="centerd">
+				 <nav>
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">My Account</a></li>
+						<li><a href="#">My Wishlist</a></li>
+						<li><a href="#">Checkout</a></li>
+						<li><a href="#">Log In</a></li>
+					</ul>
+				</nav>	
+			</div>
+		</header>
+		
+		
+			<section id="top-bar">
 				<div class="centerd">
 					<h1>MUSIC</h1>
 					<input type="text" name="search" placeholder="Search">
-					<div><span>Welcome to our<br> online store!</span></div><div id="cart_icon"><span>0</span></div>
+					<div id="welcom"><span>Welcome to our<br> online store!</span></div><div id="cart_icon"><span>0</span></div>
 				</div>
 			</section>
 			<div id="top_pics">
@@ -42,7 +46,6 @@
 					<img class="small_pic" src="images/the_philip_cohen_collection_beatles_-_69_rehearsals_1.png" alt="small one8">
 				</div>
 			</div>
-		</header>
 		<main>
 		
 		</main>
