angularizing your mockups

--- a/fullpages/index.html
+++ b/fullpages/index.html
@@ -55,7 +55,7 @@
 				<aside>
 					<nav>
 						<ul>
-							<a href="category.html#/{{genre.genre_name}}" ng-repeat="genre in genres" ng-click="pickGenre($index)"><li ng-class="{'selected' : selected_genre == $index}">{{genre.genre_name}}</li></a>
+							<a href="category.html#/{{genre.genre_id}}" ng-repeat="genre in genres" ng-click="pickGenre($index)"><li ng-class="{'selected' : selected_genre == $index}">{{genre.genre_name}}</li></a>
 						</ul>
 					</nav>
 					
