--- a/index.html
+++ b/index.html
@@ -41,11 +41,16 @@
 		<script src="app/app.js"></script>
 		
 		<script src="app/Shared/Modules.js"></script>
+		<script src="app/Shared/Routes.js"></script>
+		<script src="app/Shared/MainController.js"></script>
 		
 		<script src="app/album/AlbumsFactory.js"></script>
 		<script src="app/album/AlbumsDirective.js"></script>
+		<script src="app/album/AlbumPageController.js"></script>
 		
 		<script src="app/genre/GenresFactory.js"></script>
+		<script src="app/genre/GenreListController.js"></script>
+		<script src="app/genre/GenrePageController.js"></script>
 		<script src="app/genre/GenresDirective.js"></script>
 		
 	</body>
