--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 		<script src="app/search/SearchFactory.js"></script>
 		<script src="app/search/SearchController.js"></script>
 
+		<script src="app/Login/LoginController.js"></script>
+		<script src="app/Login/LoginFactory.js"></script>
 		
 		<script src="app/genre/GenresFactory.js"></script>
 		<script src="app/genre/GenreListController.js"></script>
