--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	</head>
 	
 	<body ng-controller="MainController">
-
 		<header>
 			<div class="centerd top-nav">
 				 <nav>
@@ -55,6 +54,9 @@
 
 		<script src="app/Login/LoginController.js"></script>
 		<script src="app/Login/LoginFactory.js"></script>
+		
+		<script src="app/Cart/Controller.js"></script>
+		<script src="app/Cart/Factory.js"></script>		
 		
 		<script src="app/genre/GenresFactory.js"></script>
 		<script src="app/genre/GenreListController.js"></script>
