--- a/checkout.html
+++ b/checkout.html
@@ -91,7 +91,7 @@
 							<span>Billing Informarion</span>
 						</div>
 						
-						<section ng-show="false">
+						<section ng-show="true">
 							<p>
 								<label class="line" for="order_shipping_address">Address<span class="required">*</span> </label>
 								<br>
@@ -145,7 +145,7 @@
 								<span>Payment Information</span>
 						</div>
 						
-						<section ng-show="false">
+						<section ng-show="true">
 							<p>
 								<input type="radio" name="order_payment_method" value="" id="check">
 								<label  for="check">Check / Money order</label>
