--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
 		<script src="app/Login/LoginController.js"></script>
 		<script src="app/Login/LoginFactory.js"></script>
 		
-		<script src="app/Cart/Controller.js"></script>
-		<script src="app/Cart/Factory.js"></script>		
+		<script src="app/Cart/CartController.js"></script>
+		<script src="app/Cart/CartFactory.js"></script>		
+		
+		<script src="app/Favorites/FavoritesController.js"></script>
+		<script src="app/Favorites/FavoritesFactory.js"></script>		
 		
 		<script src="app/genre/GenresFactory.js"></script>
 		<script src="app/genre/GenreListController.js"></script>
