--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 						<li><a href="#/">My Account</a></li>
 						<li><a href="#/">My Wishlist</a></li>
 						<li><a href="#/">Checkout</a></li>
-						<li><a href="#/">Log In</a></li>
+						<li><a href="#/login">Log In</a></li>
 					</ul>
 				</nav>	
 			</div>
