WTF!? Look what I have to do for the password verification/...

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		
 		<script src="app/Register/RegisterController.js"></script>
 		<script src="app/Register/RegisterFactory.js"></script>
+		<script src="app/Register/RegisterDirective.js"></script>
 		
 		<script src="app/Cart/CartController.js"></script>
 		<script src="app/Cart/CartFactory.js"></script>		
