--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 		<header>
 			<div class="centerd top-nav">
 				 <nav>
-					<ul>
+					<ul ng-controller="LoginController">
 						<li><a href="#/">Home</a></li>
 						<li><a href="#/">My Account</a></li>
 						<li><a href="#/" title="there's no wishlist page in the pdf but the object still works">My Wishlist</a></li>
 						<li><a href="#/checkout">Checkout</a></li>
-						<li><a href="#/login">Log In</a></li>
+						<li ng-hide="checkIfLoggedIn"><a href="#/login" ng-bind="logMessage"></a></li>
+						<li ng-show="checkIfLoggedIn"><span ng-click="logOut()" ng-bind="logMessage"></span></li>
 					</ul>
 				</nav>	
 			</div>
