--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="musicstore">
 	<head>
+		<link rel="shortcut icon" href="Images/icon.png"/>
 		<link rel="stylesheet" href="style/main.css">
 		<meta charset="utf-8">
 		<title>Musicstore</title>
