--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		</div>
 		<script src="app/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-animate.js"></script>
 		<script src="app/app.js"></script>
 		
 		<script src="app/Shared/Modules.js"></script>
