:jack_o_lantern: local session

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 						<li><a href="#/">My Account</a></li>
 						<li><a href="#/" title="there's no wishlist page in the pdf but the object still works">My Wishlist</a></li>
 						<li><a href="#/checkout/Step1/">Checkout</a></li>
-						<li ng-hide="checkIfLoggedIn"><a href="#/login" ng-bind="logMessage"></a></li>
-						<li ng-show="checkIfLoggedIn"><span ng-click="logOut()" ng-bind="logMessage"></span></li>
+						<li ng-hide="checkIfLoggedIn"><a href="#/login" >Log in</a></li>
+						<li ng-show="checkIfLoggedIn"><span ng-click="logOut()">Log out</span></li>
 					</ul>
 				</nav>	
 			</div>
